添加自定义生成资源包路径